# ED247_LIBRARY

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  dependencies.sh  mgr.sh  version.cmake
cmake/: flags.cmake  (+5 more)
doc/: CMakeLists.txt  doxyfile.in  examples.dox.in  license.dox.in  reports.dox  reports.dox.in  schemas.dox.in
doc/doxygen/: CMakeLists.txt  DoxygenLayout.xml  doc.dox.in  doxyfile.in  reports.dox.in
examples/: CMakeLists.txt  README.md  build.sh
examples/cmake/: example.cmake  flags.cmake
examples/example1_library_stream/: CMakeLists.txt  README.md
examples/example1_library_stream/receiver/: ECIC.xml  main.cpp
examples/example1_library_stream/sender/: ECIC.xml  main.cpp
examples/example2_library_buses_and_queuings/: CMakeLists.txt  README.md
examples/example2_library_buses_and_queuings/receiver/: ECIC.xml  main.cpp
examples/example2_library_buses_and_queuings/sender/: ECIC.xml  main.cpp
examples/example3_library_signals/: CMakeLists.txt  README.md
examples/example3_library_signals/receiver/: ECIC.xml  main.cpp
examples/example3_library_signals/sender/: ECIC.xml  main.cpp
examples/utils/: CMakeLists.txt  a429_tools.cpp  a429_tools.h  sync.cpp  sync.h  traces.cpp  traces.h  version.cpp
samples/exchange_stream_wait_during/: CMakeLists.txt
samples/exchange_stream_wait_during/config/: ecic_exchange_stream_wait_during_send.xml
samples/exchange_stream_wait_during/src/: exchange_stream_wait_during_recv.cpp  exchange_stream_wait_during_send.cpp
samples/walk_configuration/: CMakeLists.txt
samples/walk_configuration/config/: ecic_walk_configuration.xml
samples/walk_configuration/src/: walk_configuration_main.c
src/ed247/: CMakeLists.txt  cpp_14.h  ed247.cpp  ed247.h  ed247_bswap.h  ed247_channel.cpp  ed247_channel.h  ed247_client_iterator.h  ed247_client_list.h  ed247_cominterface.cpp  ed247_cominterface.h  ed247_context.cpp  ed247_context.h  ed247_conversion.cpp  ed247_frame_header.cpp  ed247_frame_header.h  ed247_friend_test.h  ed247_header.cpp  ed247_header.h  ed247_internals.h  ed247_logs.cpp  ed247_logs.h  ed247_memhooks.cpp  ed247_memhooks.h  ed247_sample.cpp  ed247_sample.h  ed247_signal.cpp  ed247_signal.h  ed247_stream.cpp  ed247_stream.h  ed247_stream_assistant.cpp  ed247_stream_assistant.h  ed247_time.cpp  ed247_time.h  ed247_types.h  ed247_xml.cpp  ed247_xml.h
src/ed247/xsd/: ED247A_ECD.xsd  ED247A_ECIC.xsd
src/memhooks/: CMakeLists.txt  memhooks.cpp  memhooks.h  memhooks_private.h
tests/: CMakeLists.txt  tests.dox
tests/EXAMPLE_1/: CMakeLists.txt
tests/EXAMPLE_1/config/: ECIC_EXAMPLE_1.xml
tests/EXAMPLE_1/src/: EXAMPLE_1_main.c
tests/EXAMPLE_2/config/: ECIC_EXAMPLE_2.xml
tests/EXAMPLE_2/src/: EXAMPLE_2_main.c
tests/EXAMPLE_3/config/: ECIC_EXAMPLE_3.xml
tests/EXAMPLE_3/src/: EXAMPLE_3_main.c
tests/EXAMPLE_4/config/: ECIC_EXAMPLE_4.xml
tests/EXAMPLE_4/src/: EXAMPLE_4_main.c
tests/EXAMPLE_5/: CMakeLists.txt
tests/EXAMPLE_5/config/: ECIC_EXAMPLE_5.xml
tests/EXAMPLE_5/src/: EXAMPLE_5_main.c
tests/EXAMPLE_SIGNAL_SEND_RECV_WAIT_FRAME/config/: ECIC_EXAMPLE_SIGNAL_SEND_RECV_WAIT_FRAME_SEND.xml
tests/EXAMPLE_SIGNAL_SEND_RECV_WAIT_FRAME/src/: EXAMPLE_SIGNAL_SEND_RECV_WAIT_FRAME_recv.cpp  EXAMPLE_SIGNAL_SEND_RECV_WAIT_FRAME_send.cpp
tests/EXAMPLE_STREAM_SEND_RECV_EVENT/: CMakeLists.txt
tests/EXAMPLE_STREAM_SEND_RECV_EVENT/sh/: launch_example_stream_send_recv_event.sh
tests/EXAMPLE_STREAM_SEND_RECV_EVENT/src/: EXAMPLE_STREAM_SEND_RECV_EVENT_recv.cpp  EXAMPLE_STREAM_SEND_RECV_EVENT_send.cpp
tests/EXAMPLE_STREAM_SEND_RECV_WAIT_DURING/src/: EXAMPLE_STREAM_SEND_RECV_WAIT_DURING_recv.cpp  EXAMPLE_STREAM_SEND_RECV_WAIT_DURING_send.cpp
tests/EXAMPLE_STREAM_SEND_RECV_WAIT_FRAME/: CMakeLists.txt
tests/EXAMPLE_STREAM_SEND_RECV_WAIT_FRAME/config/: ECIC_EXAMPLE_STREAM_SEND_RECV_WAIT_FRAME_RECV.xml
tests/EXAMPLE_STREAM_SEND_RECV_WAIT_FRAME/src/: EXAMPLE_STREAM_SEND_RECV_WAIT_FRAME_recv.cpp  EXAMPLE_STREAM_SEND_RECV_WAIT_FRAME_send.cpp
tests/EXAMPLE_WALK_CONFIGURATION/: CMakeLists.txt
tests/EXAMPLE_WALK_CONFIGURATION/src/: EXAMPLE_WALK_CONFIGURATION_main.c
tests/FT_EXCHANGE/: CMakeLists.txt
tests/FT_EXCHANGE_DATATIMESTAMP/: CMakeLists.txt
tests/FT_FRAME/: CMakeLists.txt
tests/FT_LOAD_ALL/: CMakeLists.txt
tests/FT_LOGGING/: CMakeLists.txt
tests/FT_PERFOS/: CMakeLists.txt
tests/UT_API_METRICS/: CMakeLists.txt
tests/UT_API_MISC/: CMakeLists.txt
tests/UT_API_SIGNALS/: CMakeLists.txt
tests/UT_LOADING/: CMakeLists.txt
tests/UT_SOCKETS/: CMakeLists.txt
tests/UT_STREAMS/: CMakeLists.txt
tests/UT_TIMESTAMP/: CMakeLists.txt
tests/api/: CMakeLists.txt
tests/cmake/: configure_file.cmake  execute_process_redirect.cmake  execute_test.cmake
tests/func_error_handling/: CMakeLists.txt
tests/func_exchange/: CMakeLists.txt
tests/func_exchange_datatimestamp/: CMakeLists.txt
tests/func_limit/: CMakeLists.txt
tests/func_load_all/: CMakeLists.txt
tests/func_logging/: CMakeLists.txt
tests/func_metrics/: CMakeLists.txt
tests/func_rev0_compliance/: CMakeLists.txt
tests/libtests/: CMakeLists.txt  functional_test.h  memhooks.cpp  memhooks.h  tests_tools.cpp  tests_tools.h  two_actors_test.h  unitary_test.h
tests/memhooks/: CMakeLists.txt  memhooks.cpp  memhooks.h  memhooks_private.h
tests/test_context/: CMakeLists.txt  test_context.cpp  test_context.h
tests/test_lib/: CMakeLists.txt
tests/test_utils/: CMakeLists.txt  memhooks.cpp  memhooks.h  test_context.cpp  test_context.h
tests/unit_api_converters/: CMakeLists.txt
tests/unit_api_metrics/: CMakeLists.txt
tests/unit_api_misc/: CMakeLists.txt
tests/unit_api_signals/: CMakeLists.txt
tests/unit_api_streams/: CMakeLists.txt
tests/unit_api_user_feedback/: CMakeLists.txt
tests/unit_loading/: CMakeLists.txt
tests/unit_sockets/: CMakeLists.txt
tests/unit_timestamp/: CMakeLists.txt
utils/: CMakeLists.txt  utils.dox
utils/chatbot/: CMakeLists.txt  chatbot.cpp
utils/dumper/: CMakeLists.txt
utils/lib/: CMakeLists.txt  a429_tools.cpp  a429_tools.h
utils/loadonly/: CMakeLists.txt
(+929 files in other folders)
