IF("${ENABLE_DOC}" EQUAL "1")
    FIND_PACKAGE(Doxygen)
    SET(DOX_PROJECT_NAME "\"ED-247 LIBRARY\"")
    SET(DOX_PROJECT_VERSION ${VERSION})
    SET(DOX_PROJECT_BRIEF "\"ED247 standard implementation\"")
    SET(DOX_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/doxygen)
    SET(DOX_DOC_LANGUAGE English)
    SET(DOX_STRIP_FROM_PATH ${PROJECT_SOURCE_DIR})
    SET(DOX_INPUT "${PROJECT_SOURCE_DIR}/doc ${PROJECT_SOURCE_DIR}/src ${CMAKE_CURRENT_BINARY_DIR}/tmp ${PROJECT_SOURCE_DIR}/README.md")
    IF(DOXYGEN_DOT_FOUND)
        SET(DOX_EXTRACT_ALL YES)
        SET(DOX_HAVE_DOT YES)
        SET(DOX_UML_LOOK YES)
    ELSE()
        MESSAGE(WARNING "# Doxygen Dot generation not found.")
        SET(DOX_EXTRACT_ALL NO)
        SET(DOX_HAVE_DOT NO)
        SET(DOX_UML_LOOK NO)
    ENDIF()
    SET(DOX_USE_MDFILE_AS_MAINPAGE ${PROJECT_SOURCE_DIR}/README.md)

    FILE(READ ${PROJECT_SOURCE_DIR}/LICENSE.md DOX_LICENSE)

    SET(DOX_EXAMPLE_1_TITLE "Configuration walk through")
    SET(DOX_EXAMPLE_1_CODE_FILENAME EXAMPLE_1_main.c)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/EXAMPLE_1/src/${DOX_EXAMPLE_1_CODE_FILENAME} DOX_EXAMPLE_1_CODE)
    SET(DOX_EXAMPLE_1_ECIC_FILENAME ECIC_EXAMPLE_1.xml)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/EXAMPLE_1/config/${DOX_EXAMPLE_1_ECIC_FILENAME} DOX_EXAMPLE_1_ECIC)

    SET(DOX_EXAMPLE_2_TITLE "Send stream samples")
    SET(DOX_EXAMPLE_2_CODE_FILENAME EXAMPLE_2_main.c)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/EXAMPLE_2/src/${DOX_EXAMPLE_2_CODE_FILENAME} DOX_EXAMPLE_2_CODE)
    SET(DOX_EXAMPLE_2_ECIC_FILENAME ECIC_EXAMPLE_2.xml)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/EXAMPLE_2/config/${DOX_EXAMPLE_2_ECIC_FILENAME} DOX_EXAMPLE_2_ECIC)

    SET(DOX_EXAMPLE_3_TITLE "Receive stream samples")
    SET(DOX_EXAMPLE_3_CODE_FILENAME EXAMPLE_3_main.c)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/EXAMPLE_3/src/${DOX_EXAMPLE_3_CODE_FILENAME} DOX_EXAMPLE_3_CODE)
    SET(DOX_EXAMPLE_3_ECIC_FILENAME ECIC_EXAMPLE_3.xml)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/EXAMPLE_3/config/${DOX_EXAMPLE_3_ECIC_FILENAME} DOX_EXAMPLE_3_ECIC)

    SET(DOX_EXAMPLE_4_TITLE "Send signal samples")
    SET(DOX_EXAMPLE_4_CODE_FILENAME EXAMPLE_4_main.c)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/EXAMPLE_4/src/${DOX_EXAMPLE_4_CODE_FILENAME} DOX_EXAMPLE_4_CODE)
    SET(DOX_EXAMPLE_4_ECIC_FILENAME ECIC_EXAMPLE_4.xml)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/EXAMPLE_4/config/${DOX_EXAMPLE_4_ECIC_FILENAME} DOX_EXAMPLE_4_ECIC)

    SET(DOX_EXAMPLE_5_TITLE "Receive signal samples")
    SET(DOX_EXAMPLE_5_CODE_FILENAME EXAMPLE_5_main.c)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/EXAMPLE_5/src/${DOX_EXAMPLE_5_CODE_FILENAME} DOX_EXAMPLE_5_CODE)
    SET(DOX_EXAMPLE_5_ECIC_FILENAME ECIC_EXAMPLE_5.xml)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/EXAMPLE_5/config/${DOX_EXAMPLE_5_ECIC_FILENAME} DOX_EXAMPLE_5_ECIC)

    FILE(READ ${PROJECT_SOURCE_DIR}/src/ed247/xsd/ED247A_ECD.xsd DOX_XSD_ECD)
    FILE(READ ${PROJECT_SOURCE_DIR}/src/ed247/xsd/ED247A_ECIC.xsd DOX_XSD_ECIC)

    CONFIGURE_FILE(doxyfile.in tmp/doxyfile @ONLY)
    CONFIGURE_FILE(examples.dox.in tmp/examples.dox @ONLY)
    CONFIGURE_FILE(schemas.dox.in tmp/schemas.dox @ONLY)
    CONFIGURE_FILE(license.dox.in tmp/license.dox @ONLY)
    
    CONFIGURE_FILE(${PROJECT_SOURCE_DIR}/tests/tests.dox tmp/tests.dox @ONLY)
    
    SET(DOX_CMD ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/tmp/doxyfile)
    ADD_CUSTOM_TARGET(doxygen ${DOX_CMD})
    INSTALL(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/doxygen DESTINATION doc)
ENDIF("${ENABLE_DOC}" EQUAL "1")