IF("${ENABLE_DOC}" EQUAL "1")
    FIND_PACKAGE(Doxygen)
    SET(DOX_PROJECT_NAME "\"ED-247 LIBRARY\"")
    SET(DOX_PROJECT_VERSION ${VERSION})
    SET(DOX_PROJECT_BRIEF "\"ED247 standard implementation\"")
    SET(DOX_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/doxygen)
    SET(DOX_DOC_LANGUAGE English)
    SET(DOX_STRIP_FROM_PATH ${PROJECT_SOURCE_DIR})
    SET(DOX_INPUT "${PROJECT_SOURCE_DIR}/doc ${PROJECT_SOURCE_DIR}/src ${CMAKE_CURRENT_BINARY_DIR}/tmp ${PROJECT_SOURCE_DIR}/README.md")
    IF(DOXYGEN_DOT_FOUND)
        SET(DOX_EXTRACT_ALL YES)
        SET(DOX_HAVE_DOT YES)
        SET(DOX_UML_LOOK YES)
    ELSE()
        MESSAGE(WARNING "# Doxygen Dot generation not found.")
        SET(DOX_EXTRACT_ALL NO)
        SET(DOX_HAVE_DOT NO)
        SET(DOX_UML_LOOK NO)
    ENDIF()
    SET(DOX_USE_MDFILE_AS_MAINPAGE ${PROJECT_SOURCE_DIR}/README.md)

    FILE(READ ${PROJECT_SOURCE_DIR}/LICENSE.md DOX_LICENSE)

    SET(DOX_EXAMPLE_1_TITLE "Configuration walk through")
    SET(DOX_EXAMPLE_NICK EXAMPLE_WALK_CONFIGURATION)
    SET(DOX_EXAMPLE_1_CODE_FILENAME ${DOX_EXAMPLE_NICK}_main.c)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/${DOX_EXAMPLE_NICK}/src/${DOX_EXAMPLE_1_CODE_FILENAME} DOX_EXAMPLE_1_CODE)
    SET(DOX_EXAMPLE_1_ECIC_FILENAME ECIC_${DOX_EXAMPLE_NICK}.xml)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/${DOX_EXAMPLE_NICK}/config/${DOX_EXAMPLE_1_ECIC_FILENAME} DOX_EXAMPLE_1_ECIC)

    SET(DOX_EXAMPLE_2_TITLE "Exchange stream samples (wait frame)")
    SET(DOX_EXAMPLE_NICK EXAMPLE_STREAM_SEND_RECV_WAIT_FRAME)
    SET(DOX_EXAMPLE_2_SEND_CODE_FILENAME ${DOX_EXAMPLE_NICK}_send.cpp)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/${DOX_EXAMPLE_NICK}/src/${DOX_EXAMPLE_2_SEND_CODE_FILENAME} DOX_EXAMPLE_2_SEND_CODE)
    SET(DOX_EXAMPLE_2_SEND_ECIC_FILENAME ECIC_${DOX_EXAMPLE_NICK}_SEND.xml)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/${DOX_EXAMPLE_NICK}/config/${DOX_EXAMPLE_2_SEND_ECIC_FILENAME} DOX_EXAMPLE_2_SEND_ECIC)
    SET(DOX_EXAMPLE_2_RECV_CODE_FILENAME ${DOX_EXAMPLE_NICK}_recv.cpp)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/${DOX_EXAMPLE_NICK}/src/${DOX_EXAMPLE_2_RECV_CODE_FILENAME} DOX_EXAMPLE_2_RECV_CODE)
    SET(DOX_EXAMPLE_2_RECV_ECIC_FILENAME ECIC_${DOX_EXAMPLE_NICK}_RECV.xml)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/${DOX_EXAMPLE_NICK}/config/${DOX_EXAMPLE_2_RECV_ECIC_FILENAME} DOX_EXAMPLE_2_RECV_ECIC)

    SET(DOX_EXAMPLE_3_TITLE "Exchange stream samples (wait during)")
    SET(DOX_EXAMPLE_NICK EXAMPLE_STREAM_SEND_RECV_WAIT_DURING)
    SET(DOX_EXAMPLE_3_SEND_CODE_FILENAME ${DOX_EXAMPLE_NICK}_send.cpp)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/${DOX_EXAMPLE_NICK}/src/${DOX_EXAMPLE_3_SEND_CODE_FILENAME} DOX_EXAMPLE_3_SEND_CODE)
    SET(DOX_EXAMPLE_3_SEND_ECIC_FILENAME ECIC_${DOX_EXAMPLE_NICK}_SEND.xml)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/${DOX_EXAMPLE_NICK}/config/${DOX_EXAMPLE_3_SEND_ECIC_FILENAME} DOX_EXAMPLE_3_SEND_ECIC)
    SET(DOX_EXAMPLE_3_RECV_CODE_FILENAME ${DOX_EXAMPLE_NICK}_recv.cpp)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/${DOX_EXAMPLE_NICK}/src/${DOX_EXAMPLE_3_RECV_CODE_FILENAME} DOX_EXAMPLE_3_RECV_CODE)
    SET(DOX_EXAMPLE_3_RECV_ECIC_FILENAME ECIC_${DOX_EXAMPLE_NICK}_RECV.xml)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/${DOX_EXAMPLE_NICK}/config/${DOX_EXAMPLE_3_RECV_ECIC_FILENAME} DOX_EXAMPLE_3_RECV_ECIC)

    SET(DOX_EXAMPLE_4_TITLE "Exchange stream samples (event)")
    SET(DOX_EXAMPLE_NICK EXAMPLE_STREAM_SEND_RECV_EVENT)
    SET(DOX_EXAMPLE_4_SEND_CODE_FILENAME ${DOX_EXAMPLE_NICK}_send.cpp)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/${DOX_EXAMPLE_NICK}/src/${DOX_EXAMPLE_4_SEND_CODE_FILENAME} DOX_EXAMPLE_4_SEND_CODE)
    SET(DOX_EXAMPLE_4_SEND_ECIC_FILENAME ECIC_${DOX_EXAMPLE_NICK}_SEND.xml)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/${DOX_EXAMPLE_NICK}/config/${DOX_EXAMPLE_4_SEND_ECIC_FILENAME} DOX_EXAMPLE_4_SEND_ECIC)
    SET(DOX_EXAMPLE_4_RECV_CODE_FILENAME ${DOX_EXAMPLE_NICK}_recv.cpp)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/${DOX_EXAMPLE_NICK}/src/${DOX_EXAMPLE_4_RECV_CODE_FILENAME} DOX_EXAMPLE_4_RECV_CODE)
    SET(DOX_EXAMPLE_4_RECV_ECIC_FILENAME ECIC_${DOX_EXAMPLE_NICK}_RECV.xml)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/${DOX_EXAMPLE_NICK}/config/${DOX_EXAMPLE_4_RECV_ECIC_FILENAME} DOX_EXAMPLE_4_RECV_ECIC)

    SET(DOX_EXAMPLE_5_TITLE "Exchange signal samples (wait frame)")
    SET(DOX_EXAMPLE_NICK EXAMPLE_SIGNAL_SEND_RECV_WAIT_FRAME)
    SET(DOX_EXAMPLE_5_SEND_CODE_FILENAME ${DOX_EXAMPLE_NICK}_send.cpp)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/${DOX_EXAMPLE_NICK}/src/${DOX_EXAMPLE_5_SEND_CODE_FILENAME} DOX_EXAMPLE_5_SEND_CODE)
    SET(DOX_EXAMPLE_5_SEND_ECIC_FILENAME ECIC_${DOX_EXAMPLE_NICK}_SEND.xml)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/${DOX_EXAMPLE_NICK}/config/${DOX_EXAMPLE_5_SEND_ECIC_FILENAME} DOX_EXAMPLE_5_SEND_ECIC)
    SET(DOX_EXAMPLE_5_RECV_CODE_FILENAME ${DOX_EXAMPLE_NICK}_recv.cpp)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/${DOX_EXAMPLE_NICK}/src/${DOX_EXAMPLE_5_RECV_CODE_FILENAME} DOX_EXAMPLE_5_RECV_CODE)
    SET(DOX_EXAMPLE_5_RECV_ECIC_FILENAME ECIC_${DOX_EXAMPLE_NICK}_RECV.xml)
    FILE(READ ${PROJECT_SOURCE_DIR}/tests/${DOX_EXAMPLE_NICK}/config/${DOX_EXAMPLE_5_RECV_ECIC_FILENAME} DOX_EXAMPLE_5_RECV_ECIC)

    FILE(READ ${PROJECT_SOURCE_DIR}/src/ed247/xsd/ED247A_ECD.xsd DOX_XSD_ECD)
    FILE(READ ${PROJECT_SOURCE_DIR}/src/ed247/xsd/ED247A_ECIC.xsd DOX_XSD_ECIC)

    CONFIGURE_FILE(doxyfile.in tmp/doxyfile @ONLY)
    CONFIGURE_FILE(examples.dox.in tmp/examples.dox @ONLY)
    CONFIGURE_FILE(schemas.dox.in tmp/schemas.dox @ONLY)
    CONFIGURE_FILE(license.dox.in tmp/license.dox @ONLY)
    
    CONFIGURE_FILE(${PROJECT_SOURCE_DIR}/tests/tests.dox tmp/tests.dox @ONLY)
    
    SET(DOX_CMD ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/tmp/doxyfile)
    ADD_CUSTOM_TARGET(doxygen ${DOX_CMD})
    INSTALL(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/doxygen DESTINATION doc)
ENDIF("${ENABLE_DOC}" EQUAL "1")